--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "nodemailer": "^6.9.7",
     "pdfkit": "^0.14.0",
     "twilio": "^4.19.3",
-    "uuid": "^9.0.1"
-  },
-  "devDependencies": {
+    "uuid": "^9.0.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
@@ -40,7 +40,9 @@
     "@types/node": "^20.10.5",
     "@types/nodemailer": "^6.4.17",
     "@types/pdfkit": "^0.13.4",
-    "@types/uuid": "^9.0.7",
+    "@types/uuid": "^9.0.7"
+  },
+  "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
