--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "pdfkit": "^0.14.0",
     "twilio": "^4.19.3",
     "uuid": "^9.0.1",
-    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.7.5",
@@ -50,5 +49,8 @@
     "prettier": "^3.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
